Text areas on recipe profile page no longer overlap when too long.

--- a/css/style.css
+++ b/css/style.css
@@ -181,3 +181,6 @@
 .radius-btn{
     border-radius: 200px;
 }
+.panel .section-form-profile .form-group span {
+    height: auto;
+}
